[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/UiTheme.tres" type="Theme" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/pickups/flowerpot/singlePot.png" type="Texture" id=3]
[ext_resource path="res://assets/pickups/ribonukleoprotein/singleDNA.png" type="Texture" id=4]
[ext_resource path="res://assets/pickups/pirateCoin/silngleCoin.png" type="Texture" id=5]
[ext_resource path="res://assets/pickups/shoe/singleShoe.png" type="Texture" id=6]

[node name="HUD" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 28.0
script = ExtResource( 2 )

[node name="Amount_Coins" type="Label" parent="."]
margin_right = 30.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "0"

[node name="Coin" type="TextureRect" parent="."]
margin_left = 34.0
margin_right = 34.0
margin_bottom = 28.0

[node name="Sprite" type="Sprite" parent="Coin"]
texture = ExtResource( 5 )
offset = Vector2( -10, 15 )

[node name="Amount_Shoes" type="Label" parent="."]
margin_left = 38.0
margin_right = 68.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "0"

[node name="Shoe" type="TextureRect" parent="."]
margin_left = 72.0
margin_right = 72.0
margin_bottom = 28.0

[node name="Sprite" type="Sprite" parent="Shoe"]
texture = ExtResource( 6 )
offset = Vector2( -10, 13 )

[node name="Amount_Flowerpots" type="Label" parent="."]
margin_left = 76.0
margin_right = 106.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "0"

[node name="Flowerpot" type="TextureRect" parent="."]
margin_left = 110.0
margin_right = 110.0
margin_bottom = 28.0

[node name="Sprite" type="Sprite" parent="Flowerpot"]
texture = ExtResource( 3 )
offset = Vector2( -10, 12 )
flip_h = true

[node name="Amount_Ribonukleoproteins" type="Label" parent="."]
margin_left = 114.0
margin_right = 144.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "0"

[node name="Protein" type="TextureRect" parent="."]
margin_left = 148.0
margin_right = 148.0
margin_bottom = 28.0

[node name="Sprite" type="Sprite" parent="Protein"]
texture = ExtResource( 4 )
offset = Vector2( -10, 15 )

[node name="Amount_Health" type="Label" parent="."]
margin_left = 152.0
margin_right = 182.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "0"

[node name="Health" type="TextureRect" parent="."]
margin_left = 186.0
margin_right = 186.0
margin_bottom = 28.0

[node name="Sprite" type="Sprite" parent="Health"]
texture = ExtResource( 4 )
offset = Vector2( -10, 15 )
